<resources>
    <string name="app_name">ProyectoDismovk</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="chat">Chat</string>
    <string name="cambiar_lenguaje">Cambiar lenguaje</string>
    <string name="lenguaje">Escoger Lenguaje</string>
    <string name="video">Video</string>
    <string name="bienvenida_login">Ingrese credenciales de inicio de sesion</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registro para Alumnos</string>
    <string name="nuevo_usuario">Registro de nuevo usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="requerido">Requerido*</string>
    <string name="aviso_cerrado_aplicacion">Presione otra vez para cerrar la aplicacion</string>
    <string name="matricula">Matricula</string>
    <string name="registro_maestros">Registro para Maestros</string>
    <string name="registrarse_btn">Registrarse</string>
    <string name="registro_de_maestros">Registro de Maestros</string>
    <string name="registro_de_alumnos">Registro de Alumnos</string>

    <string-array name="roles">
        <item>maestro</item>
        <item>alumno</item>
    </string-array>
    <array name="names">
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
        <item>Nombre</item>
    </array>

</resources>